<resources>
    <string name="app_name">Recce</string>

    <!-- General-use -->
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="pin_name">Pin Name</string>
    <string name="not_available">N/A</string>
    <string name="easting">Easting</string>
    <string name="northing">Northing</string>
    <string name="lat_lng">LatLng (WGS 84)</string>
    <string name="color">Color</string>
    <string name="group">Group</string>
    <string name="settings">Settings</string>
    <string name="coordinate_system">Coordinate System</string>
    <string name="angle_unit">Angle Unit</string>
    <string name="utm" translatable="false">UTM</string>
    <string name="kertau" translatable="false">Kertau (RSO)</string>
    <string name="kertau_full" translatable="false">Kertau (RSO) / RSO Malaya (m)</string>
    <string name="mgrs" translatable="false">MGRS</string>
    <string name="nato_mils" translatable="false">NATO mils</string>
    <string name="degrees" translatable="false">Degrees</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="saved">Saved</string>

    <!-- Pin Selector -->
    <string name="pins">Pins</string>
    <string name="chains">Chains</string>
    <string name="add_pin">Add Pin</string>
    <string name="edit_pin">Edit Pin</string>
    <string name="add_to_ruler">Add to ruler</string>
    <plurals name="number_selected">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <plurals name="number_deleted">
        <item quantity="one">%d item was deleted</item>
        <item quantity="other">%d items were deleted</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="no_pins">Add a Pin from the map or
        \nby clicking the button below.</string>
    <string name="share">Share</string>
    <string name="share_code">Share Code</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied to clipboard</string>
    <string name="paste">Paste</string>
    <string name="paste_error">Unable to fetch from clipboard</string>
    <string name="share_code_error">Share Code is invalid</string>
    <plurals name="pins">
        <item quantity="one">%d Pin</item>
        <item quantity="other">%d Pins</item>
    </plurals>
    <plurals name="chains">
        <item quantity="one">%d Chain</item>
        <item quantity="other">%d Chains</item>
    </plurals>
    <string name="sharing">Sharing</string>
    <string name="and">and</string>
    <!-- Sorting -->
    <string name="sort">Sort</string>
    <string name="time_added">Time added</string>
    <string name="a_to_z">A-Z</string>
    <string name="z_to_a">Z-A</string>
    <string name="newest_first">Newest First</string>
    <string name="oldest_first">Oldest First</string>

    <!-- Pin Creator -->
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="new_group_plus">+ New group</string>
    <string name="new_group">New Group</string>
    <string name="group_name">Group name</string>
    <string name="none">None</string>
    <string name="mgrs_string">MGRS String</string>
    <string name="tap_enter_hint">Press \'Enter\' to update coordinates</string>
    <!-- Errors -->
    <string name="name_blank_error">Pin name cannot be blank</string>
    <string name="name_too_long_error"> Pin name cannot exceed 20 characters</string>
    <string name="lat_empty_error">Latitude cannot be blank</string>
    <string name="long_empty_error">Longitude cannot be blank</string>
    <string name="lat_out_of_range_error">Latitude is out of range</string>
    <string name="group_empty_error">Group cannot be blank</string>
    <string name="group_too_long_error">Group name cannot exceed 12 characters</string>
    <string name="group_invalid_error">Group name invalid</string>
    <string name="pin_invalid_error">Pin name contains invalid characters</string>

    <!-- Chain Creator -->
    <string name="chain_name">Chain Name</string>
    <string name="type">Type</string>
    <string name="route">Route</string>
    <string name="area">Area</string>
    <string name="edit">Edit</string>

    <!-- Map -->
    <string name="map">Map</string>
    <string name="zone">Zone</string>
    <string name="add_pin_plus">+ Add pin</string>
    <string name="new_checkpoint">New Checkpoint</string>
    <string name="unnamed">Unnamed</string>
    <!-- Errors -->
    <string name="checkpoint_name_too_long_error">Checkpoint name cannot exceed 20 characters</string>
    <string name="checkpoint_invalid_error">Checkpoint name contains invalid characters</string>

    <!-- GPS -->
    <string name="gps">GPS</string>
    <string name="location">Location</string>
    <string name="azimuth">Azimuth</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="accuracy">Accuracy</string>
    <string name="compass_calibration">Calibrate your device\'s geomagnetic sensors
        \nby swinging your device in a figure 8 motion</string>
    <string name="compass_note">Note: The compass and azimuth reading is most accurate when the device is lying parallel to the ground with the screen facing up/down</string>
    <string name="altitude">Altitude</string>

    <!-- Ruler -->
    <string name="ruler">Ruler</string>
    <string name="distance">Distance</string>
    <string name="direction">Direction</string>
    <string name="bearing">Bearing</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="clear_ruler">Clear Ruler</string>
    <string name="tip">Tip:</string>
    <string name="ruler_empty">Ruler is empty</string>
    <string name="ruler_hint">Tap and hold Pins, Routes and Areas in the Saved tab to select them</string>
    <string name="end">End</string>
    <plurals name="intermediate_nodes">
        <item quantity="one">%d intermediate node</item>
        <item quantity="other">%d intermediate nodes</item>
    </plurals>

    <!-- Onboarding -->
    <string name="onboarding_welcome">Welcome to Recce!</string>
    <string name="onboarding_title">You will now go through a set-up guide to choose your preferences.</string>
    <string name="coord_sys_description">Choose a preferred coordinate system for projected grids. These grids will be displayed alongside Latitude &amp; Longitude throughout the app.</string>
    <string name="angle_unit_description">Choose a preferred unit for displaying angles. This will be used throughout the app.</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="next_angle_unit">Next: Angle Unit</string>
    <string name="next_all_set">Next: All Set</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="all_set">All Set!</string>
    <string name="onboarding_ready">You are now ready to start using Recce.
        \nYou can change your preferences at any time by opening Settings in the Pins tab.</string>
    <string name="start">Start</string>
    <string name="nsf_nsmen">NSF / NSmen</string>
    <string name="all_set_for_ns">All Set For NS!</string>
    <string name="onboarding_ns"> Your preferences have been automatically set (Kertau RSO, NATO mils). Thank you for the support!
        \n\nRemember: Do NOT input any sensitive/restricted information into the app.</string>

    <!--
      Guides
      -->

    <string name="guide_show_only_once">This guide will appear only once</string>
    <string name="reset_all_guides">Reset All Guides</string>

    <!-- Chains Guide -->
    <string name="guide_chains">Chains Guide</string>
    <string name="guide_chain_overview">You have entered the Chain creation mode by pressing the + Add button.
        \n\nIn this mode, you can plot a Route or demarcate an Area by sliding the map around and placing checkpoints. This mode involves the following 3 buttons:</string>
    <string name="guide_chains_undo">Click to undo the last node or exit chain-editing mode.
        \nClick and hold to discard all nodes and exit chain-editing mode.</string>
    <string name="guide_chains_add">Click to add a node to the line.
        \nClick and hold to add a named checkpoint.</string>
    <string name="guide_chains_save">Click to save the plotted line as a Route or an Area.</string>

</resources>
