<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">


    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_chains"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="?android:attr/textColorPrimary"/>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/guide_show_only_once"
        android:layout_marginBottom="@dimen/large_padding" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="@dimen/large_padding">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/guide_chain_overview" />

            <ImageView
                android:id="@+id/guide_chain_undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/large_padding"
                android:src="@drawable/ic_round_undo_24"
                app:tint="@color/colorPrimary"/>

            <TextView
                android:labelFor="@id/guide_chain_undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/undo"
                android:textColor="@color/colorPrimary" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/guide_chains_undo"
                android:paddingStart="@dimen/large_padding"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/guide_chain_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/large_padding"
                android:src="@drawable/ic_round_add_24"
                app:tint="@color/colorPrimary" />

            <TextView
                android:labelFor="@id/guide_chain_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textColor="@color/colorPrimary" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/guide_chains_add"
                android:paddingStart="@dimen/large_padding"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/guide_chain_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/large_padding"
                android:src="@drawable/ic_round_done_24"
                app:tint="@color/colorPrimary" />

            <TextView
                android:labelFor="@id/guide_chain_save"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorPrimary" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/guide_chains_save"
                android:paddingStart="@dimen/large_padding"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/guide_chain_done"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_margin="@dimen/large_padding"
        android:layout_gravity="end"/>
</LinearLayout>