<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sgRed">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_padding"
            app:srcCompat="@drawable/ic_onboarding_ns"/>
        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/textColorLight"
            android:text="@string/all_set_for_ns" />
        <TextView
            style="@style/TextAppearance.Recce.Onboarding.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:gravity="center"
            android:textColor="@color/textColorLight"
            android:text="@string/onboarding_ns" />

        <Button
            android:id="@+id/onboarding_ns_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:backgroundTint="@android:color/white"
            android:text="@string/start"
            android:textColor="@color/sgRed"/>

        <Button
            android:id="@+id/onboarding_ns_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/textColorLight"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>