<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creator_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/large_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/creator_sheet_header"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/add_pin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_pin_delete"
            style="@style/Widget.Reconnaissance.Button.TextButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:visibility="gone"
            app:icon="@drawable/ic_delete_white_24dp"
            tools:visibility="visible" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_pin_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tiny_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_weight="3"
            android:hint="@string/pin_name"
            android:inputType="textPersonName"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pin_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_color_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_padding"
            android:layout_weight="2"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/new_pin_color_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_lat_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tiny_padding"
            android:layout_weight="1"
            android:hint="@string/latitude"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pin_lat_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_long_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_padding"
            android:layout_weight="1"
            android:hint="@string/longitude"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pin_long_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/small_padding"
        android:background="@color/dividerGrey" />

    <TextView
        android:id="@+id/new_pin_grid_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/small_padding"
        android:text="@string/utm"
        android:textColor="@color/primaryTextColor"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/new_pin_grid_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_zone_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_weight="0"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/new_pin_zone_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zone"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_easting_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tiny_padding"
            android:layout_weight="1"
            android:hint="@string/easting"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pin_easting_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_northing_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_padding"
            android:layout_weight="1"
            android:hint="@string/northing"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pin_northing_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>